--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="preload" href="./fonts/DINPro-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="stylesheet" href="vendors/fancybox/fancybox.css">
     <link rel="stylesheet" href="vendors/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/common.css?v=1">
 </head>
 
 <body>
